build: update start script and add postinstall script

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "https://github.com/f4hr/topster-api.git"
   },
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "postinstall": "npm run build",
+    "start": "node bin/app.js",
     "serve": "npx nodemon",
     "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production npx tsc"
