--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ API_TIME_WINDOW=60000
 # LastFM
 LASTFM_API_URL=
 LASTFM_API_KEY=
+# Spotify
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CALLBACK_URI=
