--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "topster-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Topster API",
   "homepage": "https://github.com/f4hr/topster-api#readme",
   "bugs": {
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^7.0.0",
+    "@fastify/oauth2": "^5.0.0",
     "@fastify/rate-limit": "^6.0.0",
     "@fastify/sensible": "^4.0.0",
     "axios": "^0.26.1",
